# prima_assistent

./: .env.example  .gitignore  Makefile  docker-compose.yaml  main.py  pyproject.toml
pkg/: logging.py
src/: config.py
src/bot/: bot.py  utils.py
src/bot/filters/: SubscribeFilter.py
src/bot/keyboards/: back.py  boost_main_menu.py  boost_setting_one.py  boost_settings.py  keyboards.py  subscription.py
src/bot/middlewares/: logger_mw.py  storage_mw.py
src/bot/routers/: back_to.py  boost_more.py  boost_settings.py  routers.py  start.py  subscription.py  utils.py
src/bot/states/: states.py
src/lexicon/: lexicon.py
src/storage/db/: connect.py  db.py
src/storage/db/models/: user.py
src/storage/db/repositories/: user.py
src/storage/redis/: db_redis.py
